<resources>
    <string name="app_name">Skill Share</string>


    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="add_logo">Add Logo</string>
    <string name="fullName">Full name</string>
    <string name="college">College</string>
    <string name="takingCourses">Taking Courses</string>
    <string name="offeringCourses">Offering Courses</string>
    <string name="searchForCourse">Search for course</string>
    <string name="courseName">Course Name</string>
    <string name="description">Description</string>
    <string name="descriptionText">Description Text</string>
    <string name="rating">Rating</string>
    <string name="ratingText">Rating Text</string>
    <string name="author">Author</string>
    <string name="authorEmail">Author Name</string>
    <string name="price">Price</string>
    <string name="priceAmount">Price Amount</string>
    <string name="reviews">Reviews</string>
    <string name="reviewsList">Reviews List</string>
    <string name="targetAudience">Target Audience</string>
    <string name="targetAudienceText">Target Audience Text</string>
    <string name="offerNewCourse">Offer a new course</string>
    <string name="submit">Submit</string>
    <string name="registeredStudents">Registered Students</string>
    <string name="registeredStudentsText">Registered Students Text</string>
    <string name="joinRequests">Join Requests</string>
    <string name="about">About</string>
    <string name="aboutText">About Text</string>
    <string name="help">Help</string>
    <string name="helpText">Help Text</string>
    <string-array name="colleges">
        <item>Colman</item>
        <item>HUJI</item>
        <item>TAO</item>
        <item>Technion</item>
        <item>BGU</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="join">Join</string>
    <string name="review">Review</string>

</resources>
